# gaurav_flam

./: README.md  README.md.docx  README_Latest.docx  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/opencvedgedetection/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/Ui/: CameraPreview.kt  EdgeGLView.kt  EdgeRenderer.kt
app/src/main/java/com/example/opencvedgedetection/: MainActivity.kt
app/src/main/java/com/example/opencvedgedetection/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: themes.xml
app/src/test/java/com/example/opencvedgedetection/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
