cmake_minimum_required(VERSION 3.10.2)
project(opencvedgedetection)
include_directories(src/main/cpp/include ${CMAKE_SOURCE_DIR}/../jniLibs/include/opencv4)
add_library(native-lib SHARED src/main/cpp/native-lib.cpp)
set(distribution_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src/main/jniLibs)
add_library(opencv_java4 SHARED IMPORTED)
set_target_properties(opencv_java4 PROPERTIES IMPORTED_LOCATION ${distribution_DIR}/${ANDROID_ABI}/libopencv_java4.so)
find_library(log-lib log)
target_link_libraries(native-lib opencv_java4 ${log-lib})
